[gd_scene load_steps=4 format=3 uid="uid://pwa5udh3xm1l"]

[ext_resource type="Texture2D" uid="uid://bq0mbfu6rx8td" path="res://7ee43017-a390-4112-9c32-83f52e4fa9f6_upscaled.png" id="1_2cf7y"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_rd5h2"]
[ext_resource type="FontFile" uid="uid://diqisommjuaf4" path="res://KinderBoys-z8J0D.otf" id="2_ndslm"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rd5h2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -879.0
offset_top = -523.0
offset_right = 17.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2cf7y")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.92041, 0.76, 0.100985, 1)
theme_override_colors/font_shadow_color = Color(0.345098, 0.14902, 0.188235, 1)
theme_override_colors/font_outline_color = Color(0.202685, 0.0756117, 0.101147, 1)
theme_override_constants/shadow_offset_x = 14
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_ndslm")
theme_override_font_sizes/font_size = 200
text = "Sari Sari Skies"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator7" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="play_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.760784, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_ndslm")
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="options_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.760784, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_ndslm")
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="credits_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.760784, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_ndslm")
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.760784, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_ndslm")
theme_override_font_sizes/font_size = 60
text = "Exit"
